Added a placeholder hero imageand did some housecleaning.

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,8 +24,16 @@
 		    </ul>
 	    </nav>
   	</div><!-- navbar -->
-
 </header>
+
+<div class="large-hero">
+    <img src="assets/images/dv50-hero-01--large.jpg">
+    <h1>Diez Vista 50k + 100k</h1>
+    <h2>Some roots, some rocks, some mud and some nice trail.</h2>
+    <p>Registration is now open for the 2017 Diez Vista 50km.</p>
+    <p><a href="#">Register on Race Roster</a></p>
+  </div>
+
 <section id="registration" class="">
 	<h1>Registration</h1>
 	<p>The 2017 Diez Vista Trail Run will take place on Saturday, April 8.</p>
@@ -32,6 +41,7 @@
 	<p>There will be NO REFUNDS and NO DAY-OF-RACE ENTRY. ENTRIES ARE NOT TRANSFERABLE (no exceptions).</p>
 	<p>Registration will open in December.</p>
 </section><!-- registration -->
+
 <section id="race-details" class="">
 	<h1>Race Details</h1>		
 	<dl>
